# cmakelab

./: CMakeLists.txt  main.cpp
cmake/Hunter/: config.cmake
